# SysWhispers3

./: .gitignore  .pages  README.md  __metadata.py  docs_requirements.txt  mkdocs.yml  pyproject.toml  setup.py  syswhispers.py
.github/workflows/: build.yml  publish.yml.hold  publish_doc.yml
app/: syscallsGenerator.py
app/abstracts/: abstractFactory.py
app/constants/: sysWhispersConstants.py
app/utils/: __init__.py  loggerSingleton.py  singleton.py  utils.py
data/: base.c  base.h  prototypes.json  typedefs.json
docs/: .pages  index.md
docs/contribute/: code_rules.md  installation.md  poetry.md  prerequise.md  tests.md
docs/install/: installation.md  prerequise.md  uninstall.md
example-output/: Syscalls-asm.x64.asm  Syscalls.c  Syscalls.h  SyscallsStubs.asm
syswhispers3/: __init__.py  syscallsGenerator.py
syswhispers3/abstracts/: abstractFactory.py
syswhispers3/constants/: sysWhispersConstants.py
syswhispers3/data/: base-x64.asm  base-x86.asm  base.c  base.h  typedefs.json
syswhispers3/utils/: __init__.py  loggerSingleton.py  utils.py
tests/: codeUtil.py  test_00_abstract.py  test_01_syscalls_generator.py  test_02_asm_code_embedded.py  test_03_asm_code_jumper.py  test_04_asm_code_jumper_randomized.py  test_05_asm_code_egg_hunter.py  test_06_c_code.py  test_07_h_code.py  test_08_standalone.py
tests/fixtures/: egg_hunter.h  egg_hunter_mingw_x64.asm  egg_hunter_mingw_x86.asm  egg_hunter_msvc_x64.asm  egg_hunter_msvc_x86.asm  embedded.h  embedded_mingw.c  embedded_mingw_x64.asm  embedded_mingw_x86.asm  embedded_msvc_x64.asm  embedded_msvc_x86.asm  jumper.h  jumper_mingw_x64.asm  jumper_mingw_x86.asm  jumper_msvc.c  jumper_msvc_x64.asm  jumper_msvc_x86.asm  jumper_randomized.h  jumper_randomized_mingw_x64.asm  jumper_randomized_mingw_x86.asm  jumper_randomized_msvc_x64.asm  jumper_randomized_msvc_x86.asm  standalone_mingw_default.h  standalone_mingw_jumper.h  standalone_mingw_jumper_randomized.h
