[tool.poetry]
name = "syswhispers3"
version = "0.1.0"
description = "SysWhispers on Steroids - AV/EDR evasion via direct system calls"
authors = ["0x42en <0x42en@gmail.com>"]
license = "Apache License 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
